UI: Prevent scrollbars showing up unnecessarily on some browsers
Use overlay overflow for compatible browsers (e.g. Chromium),
fallback to auto for non-compatible browsers (e.g. Firefox).

There should be no visible changes for Firefox users (tested on 101.0.1).

--- a/web/app/src/assets/base.css
+++ b/web/app/src/assets/base.css
@@ -120,7 +120,9 @@ body {
   /* These two are necessary for the automatic resizing of the tasks table: */
   /* Ensures that the table cannot push down the bottom of the column element,
   *  and thus the column height is a stable reference. */
+  /* Firefox does not recognize "overlay" currently, so have "auto" as fallback. */
   overflow-y: auto;
+  overflow-y: overlay;
   /* Ensures the offsetParent of the table is the column itself; without this,
   * offsetParent would be <body>. */
   position: relative;
